# papdzvcl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml  python-publish.yml
src/papdzvcl/: core.py  exceptions.py  init.py
tests/: test_core.py
