[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papdzvcl"
version = "1.0.0"
description = "HTTP Client cực chất với Ok1, Ok2, Ok3"
authors = [
    {name = "PAPDZ VCL Team", email = "papdzvcl@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "requests>=2.25.0",
]
